Add new features image, update features section with enhanced content and layout, and modify styles for improved visual consistency. Update hero section styles for better presentation.

--- a/chupa_workshop/src/app/page.module.css
+++ b/chupa_workshop/src/app/page.module.css
@@ -1,6 +1,6 @@
 .page {
   --background: #c2b9b9ba;
-  --foreground: #c5c5c5;
+  --foreground: #fff;
 
   --text-primary: #000;
   --text-secondary: #666;
