--- a/chupa_workshop/src/modules/home/Hero/hero.module.css
+++ b/chupa_workshop/src/modules/home/Hero/hero.module.css
@@ -17,6 +17,9 @@
     display: flex;
     align-items: center;
 
+    border-bottom: 2px solid #a8a8a8;
+    box-shadow: 0 15px 12px -5px #00000047;
+
     background-image: url('/images/hero.jpg');
     background-size: cover;
     background-position: center;
