Add transformation style for reversed image layout in features section

--- a/chupa_workshop/src/modules/home/Features/features.module.css
+++ b/chupa_workshop/src/modules/home/Features/features.module.css
@@ -96,6 +96,10 @@
     text-align: start;
 }
 
+.rowReversed .rowImage {
+    transform: scaleX(-1);
+}
+
 .rowTitle {
     font-size: 22px;
     font-weight: 700;
