Add DropdownFilter component with associated styles for improved filtering options in FiltersSidebar; refactor existing filter selections to utilize new component and update filter options in filterOptions module.

--- a/chupa_workshop/src/modules/catalog/components/FiltersSidebar/filtersSidebar.module.css
+++ b/chupa_workshop/src/modules/catalog/components/FiltersSidebar/filtersSidebar.module.css
@@ -73,6 +73,12 @@
     width: 100%;
 }
 
+.priceInputs .input::-webkit-inner-spin-button,
+.priceInputs .input::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 .priceSeparator {
     color: rgba(244, 245, 247, 0.7);
     font-weight: 500;
