--- a/chupa_workshop/src/modules/cart/components/cartModal.module.css
+++ b/chupa_workshop/src/modules/cart/components/cartModal.module.css
@@ -2,7 +2,7 @@
   display: flex;
   gap: 12px;
   align-items: flex-start;
-  padding: 8px 0;
+  padding: 20px 0;
   border-bottom: 1px solid #eee;
 }
 
@@ -62,4 +62,31 @@
   text-align: center;
   font-size: 1.1rem;
   color: #666;
+  padding-bottom: 10px;
+}
+
+.closeButton {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+
+  width: 32px;
+  height: 32px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: transparent;
+  border: none;
+
+  font-size: 24px;
+  line-height: 1;
+  cursor: pointer;
+
+  color: white;
+}
+
+.closeButton:hover {
+  color: #9b7e4b;
 }
