--- a/chupa_workshop/src/modules/home/Cta/cta.module.css
+++ b/chupa_workshop/src/modules/home/Cta/cta.module.css
@@ -14,7 +14,7 @@
   inset: 0;
   background:
     linear-gradient(0deg, #ffffff66, #00000096),
-    url('/images/cta1.jpg') center / cover no-repeat;
+    url('/images/cta/cta1.jpg') center / cover no-repeat;
   z-index: 0;
 }
 
