--- a/chupa_workshop/src/modules/cart/ui/cartItemUI.module.css
+++ b/chupa_workshop/src/modules/cart/ui/cartItemUI.module.css
@@ -23,6 +23,12 @@
   background-color: #2a2a2a;
 }
 
+.buttonsWrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
+
 .content {
   display: flex;
   flex-direction: column;
@@ -44,13 +50,36 @@
 .footer {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.quantity {
+  font-size: 14px;
+  line-height: 1;
+  color: #6b7280; /* нейтральный серый */
+  font-weight: 500;
+  white-space: nowrap;
 }
 
 .price {
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 600;
   color: #dba245;
+}
+
+.addButton {
+  background-color: green;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  padding: 4px 10px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.addButton:hover {
+  background-color: rgb(1, 184, 1);
 }
 
 .removeButton {
@@ -60,7 +89,6 @@
   border-radius: 6px;
   padding: 4px 10px;
   cursor: pointer;
-  align-self: start;
   transition: background-color 0.2s;
 }
 
