--- a/src/modules/checkout/ui/checkoutFormUI.module.css
+++ b/src/modules/checkout/ui/checkoutFormUI.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   gap: 20px;
 
-  background: #4c4f554f;
+  background: white;
 
   border: 1px solid rgba(255, 255, 255, 0.55);
   border-radius: 14px;
@@ -30,7 +30,7 @@
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 0.05em;
-  color: #e0e0e0;
+  color: black;
 }
 
 .error {
@@ -51,18 +51,19 @@
   text-transform: none;
   letter-spacing: 0.4px;
 
-  background: rgba(166, 124, 82, 0.9);
-  border: 1px solid rgba(235, 174, 112, 0.4);
-  border-radius: 10px;
+  background: white;
+  border: 1px solid black;
+  color: black;
+  border-radius: 6px;
 
-  transition: all 0.2s ease;
+  transition: all 0.5s ease;
 
   cursor: pointer;
 }
 
 .submitButton:hover {
-  background: #ebae70;
-  border-color: #ebae70;
+  background: black;
+  color: white;
   box-shadow: 0 4px 20px rgba(235, 174, 112, 0.3);
 }
 
@@ -71,9 +72,9 @@
 }
 
 .submitButton:disabled {
-  background-color: #444;
+  background-color: white;
   cursor: not-allowed;
-  color: #f5f5f53d;
+  color: #00000029;
 }
 
 .submitError {
