--- a/src/shared/ui/footer/Footer.module.css
+++ b/src/shared/ui/footer/Footer.module.css
@@ -46,11 +46,7 @@
 }
 
 .sectionTitle {
-  line-height: 1.5;
   letter-spacing: 1px;
-  text-transform: uppercase;
-  font-size: 18px;
-  font-weight: 400;
   color: white;
 }
 
@@ -196,6 +192,7 @@
   gap: 0.25rem;
   line-height: 1.6em;
   text-decoration: none;
+  font-size: clamp(0.8rem, 1vw, 1rem);
   transition:
     background-color 0.15s,
     color 0.15s;
